Creating database and user model

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,8 +22,9 @@ services:
     volumes:
       - $HOME/.postgres/pamps_db/data/postgresql:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      # ATENÇÃO: Mude para 5432: se precisar acessar via host
+      - "5435:5432"
     environment:
-      - POSTGRES_DBS=pamps, pamps_test
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      POSTGRES_DBS: pamps
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
